--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.2.0
   firebase_auth: ^4.1.2
   email_validator: ^2.1.17
+  hive: ^2.2.3
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
