--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   email_validator: ^2.1.17
   hive: ^2.2.3
   fluttertoast: ^8.1.1
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/
+     - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
