--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive: ^2.2.3
   fluttertoast: ^8.1.1
   flutter_svg: ^1.1.6
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -83,12 +84,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Playfair Display
+       fonts:
+         - asset: fonts/Playfair/PlayfairDisplay-VariableFont_wght.ttf
+         - asset: fonts/Playfair/PlayfairDisplay-Italic-VariableFont_wght.ttf
+           style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
