--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -85,11 +85,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: Playfair Display
+     - family: Manrope
        fonts:
-         - asset: fonts/Playfair/PlayfairDisplay-VariableFont_wght.ttf
-         - asset: fonts/Playfair/PlayfairDisplay-Italic-VariableFont_wght.ttf
-           style: italic
+         - asset: fonts/manrope/Manrope-VariableFont_wght.ttf
+           weight: 900
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
