--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   fluttertoast: ^8.1.1
   flutter_svg: ^1.1.6
   google_fonts: ^3.0.1
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
