--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_svg: ^1.1.6
   google_fonts: ^3.0.1
   device_preview: ^1.1.0
-
+  font_awesome_flutter: ^10.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
