--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_fonts: ^3.0.1
   device_preview: ^1.1.0
   font_awesome_flutter: ^10.3.0
+  shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
