--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   device_preview: ^1.1.0
   font_awesome_flutter: ^10.3.0
   shared_preferences: ^2.0.15
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
