--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  modal_bottom_sheet: ^2.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
