--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   modal_bottom_sheet: ^2.1.2
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
