--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   equatable: ^2.0.5
   modal_bottom_sheet: ^2.1.2
   intl: ^0.17.0
+  flutter_launcher_icons: ^0.11.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,7 +66,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  android : true
+  ios : true
+  image_path : "assets/emily.jpg"
 # The following section is specific to Flutter packages.
 flutter:
 
