--- a/tenant_bureau/android/app/src/main/AndroidManifest.xml
+++ b/tenant_bureau/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tenant_bureau">
+    package="com.tenant_bureau">
    <application
         android:label="tenant_bureau"
         android:name="${applicationName}"
