--- a/tenant_bureau/pubspec.yaml
+++ b/tenant_bureau/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   modal_bottom_sheet: ^2.1.2
   intl: ^0.17.0
   flutter_launcher_icons: ^0.11.0
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
